--- a/client-app/app/views/editBook.html
+++ b/client-app/app/views/editBook.html
@@ -52,7 +52,7 @@
 		<div class="form-group row">
 			<label class="col-sm-2 col-form-label">Book Cover Image</label>
 			<div class="col-sm-10">
-				<input class="form-control" type="text" placeholder="Paste the URL to book cover image" ng-model="vm.book.url">
+				<input class="form-control" type="text" placeholder="Paste the URL to book cover image" ng-model="vm.book.image_url">
 			</div>
 		</div>
 		<div class="form-group row">
